[gd_scene load_steps=2 format=3 uid="uid://dhfxp03wrqhat"]

[ext_resource type="Script" uid="uid://c3hqoru0s2841" path="res://scenes/start_screen.gd" id="1_4k4m3"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4k4m3")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "Coin Dash"
horizontal_alignment = 1

[node name="CarPreview" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 110.0
offset_right = 50.0
offset_bottom = 210.0
grow_horizontal = 2

[node name="CarBackground" type="ColorRect" parent="CarPreview"]
layout_mode = 1
anchors_preset = -1
anchor_top = 10.34
anchor_right = 1.0
anchor_bottom = 11.34
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.15, 1)

[node name="CarSprite" type="Sprite2D" parent="CarPreview"]
position = Vector2(50, 1162)
scale = Vector2(2, 2)

[node name="SelectedCarLabel" type="Label" parent="CarPreview"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = 5.0
offset_right = 75.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 0
text = "Current Car"
horizontal_alignment = 1

[node name="MainMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="PlayButton" type="Button" parent="MainMenu"]
layout_mode = 2
text = "Play"

[node name="UpgradesButton" type="Button" parent="MainMenu"]
layout_mode = 2
text = "Upgrades"

[node name="CarSelectButton" type="Button" parent="MainMenu"]
layout_mode = 2
text = "Select Car"

[node name="QuitButton" type="Button" parent="MainMenu"]
layout_mode = 2
text = "Quit"

[node name="TotalCoins" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Total Coins: 0"
horizontal_alignment = 1
